Fix shifting when active

--- a/styleguide/source/assets/scss/01-atoms/_radio-button.scss
+++ b/styleguide/source/assets/scss/01-atoms/_radio-button.scss
@@ -18,8 +18,8 @@
 
     &.ui-icon {
       position: relative;
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       background-image: none;
       box-shadow: none;
     }
